--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Newly forked from https://github.com/AlexWillisson/naga2014
+
+No code changed yet, nor documentation
+
+================================================================
+
 To install:
 
 make naga2014
